force-app/main/default/objects/IT_Slabs__mdt/IT_Slabs__mdt.object-meta.xml
<CustomObject>
    <label>IT Slab</label>
    <pluralLabel>IT Slabs</pluralLabel>
</CustomObject>