force-app/main/default/objects/IT_Slabs__mdt/fields/citizen_type__c.field-meta.xml
<CustomField>
    <fullName>citizen_type__c</fullName>
    <label>citizen type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid Level (&lt;60)</fullName>
                <default>true</default>
                <label>Mid Level (&lt;60)</label>
            </value>
            <value>
                <fullName>Senior (60 to 80)</fullName>
            </value>
            <value>
                <fullName>Super Senior (&gt;80)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>