force-app/main/default/objects/IT_Slabs__mdt/fields/lower_limit_taxable_income__c.field-meta.xml
<CustomField>
    <fullName>lower_limit_taxable_income__c</fullName>
    <label>lower limit taxable income</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>