force-app/main/default/objects/IT_Slabs__mdt/fields/net_taxable_income__c.field-meta.xml
<CustomField>
    <fullName>net_taxable_income__c</fullName>
    <label>net taxable income</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>