force-app/main/default/objects/IT_Slabs__mdt/fields/tax_constant__c.field-meta.xml
<CustomField>
    <fullName>tax_constant__c</fullName>
    <label>tax constant</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>