force-app/main/default/objects/IT_Slabs__mdt/fields/tax_percent__c.field-meta.xml
<CustomField>
    <fullName>tax_percent__c</fullName>
    <label>tax percent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>