force-app/main/default/objects/IT_Slabs__mdt/fields/upper_limit__c.field-meta.xml
<CustomField>
    <fullName>upper_limit__c</fullName>
    <label>upper limit</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>